# Decorator

./: .gitignore  README.md  pyproject.toml
decorator/: __init__.py  generator.py  main.py
